# air_robot_arm

./: .gitattributes  .gitignore  README.md
air_description/: CMakeLists.txt  package.xml
air_description/config/: joint_names_urdf.yaml
air_description/launch/: display.launch  gazebo.launch
air_description/meshes/: base_link.STL  pitch.STL  roll.STL  s1.STL  s2.STL
air_description/urdf/: air.urdf  arm_moveit.urdf  qbhand.urdf  urdf.csv  urdf.urdf
air_dual_arm_config/: .setup_assistant  CMakeLists.txt  package.xml
air_dual_arm_config/config/: air_dual_arm_description.srdf  fake_controllers.yaml  gazebo_air_dual_arm_description.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
air_dual_arm_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
air_dual_arm_description/: CMakeLists.txt  package.xml
air_dual_arm_description/config/: joint_names_ARL1_00.yaml  joint_names_air_dual_arm_description.yaml
air_dual_arm_description/launch/: display.launch  gazebo.launch
air_dual_arm_description/meshes/: base_link.STL  e_2.STL  pitch_2.STL  roll_2.STL  s1_2.STL  s2_2.STL  s3_2.STL
air_dual_arm_description/urdf/: air_dual_arm.urdf  air_dual_arm_description.csv  air_dual_arm_description.urdf
air_hardware_interface/: CMakeLists.txt  package.xml
air_hardware_interface/config/: hardware.yaml
air_hardware_interface/include/: air_arm_hardware.hpp  air_arm_hardware_interface.hpp  air_right_arm_interface.hpp
air_hardware_interface/launch/: air_hardware_interface.launch
air_hardware_interface/src/: air_arm_hardware_interface.cpp  air_right_arm_interface.cpp
air_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
air_moveit_config/config/: air_config-2.yaml  air_config-3.yaml  air_config.yaml  fake_controllers.yaml  gazebo_urdf.urdf  joint_limits.yaml  kinematics.yaml  mtc.rviz  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  urdf.srdf
air_moveit_config/include/: detect_and_add.hpp  pick_demo.hpp
air_moveit_config/launch/: air_bringup.launch  air_cloud.launch  air_control.launch  air_mtc.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_ros_control.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  pickplace-2.launch  pickplace-3.launch  pickplace.launch  planning_context.launch  ros_control_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  urdf_moveit_sensor_manager.launch.xml
air_moveit_config/scripts/: generate_pose.py  pickplace.py
air_moveit_config/scripts/yolov7/: detect.py
air_moveit_config/scripts/yolov7/utils/: google_utils.py
air_moveit_config/src/: add_cylinder.cpp  add_scene.cpp  add_sphere.cpp  detect_and_add.cpp  detect_and_add_ball.cpp  detect_and_add_cylinder_collision_object_demo.cpp  detect_and_add_objects.cpp  detect_and_add_orange.cpp  pick_ball_MTC.cpp  pick_demo.cpp  pick_place_demo.cpp  pick_place_task.cpp  sub_col.cpp
moveit_task_constructor/demo/config/: panda_config.yaml
moveit_task_constructor/demo/scripts/: modify_planning_scene.py  pickplace.py
moveit_task_constructor/demo/src/: pick_place_task.cpp
qbdevice-ros/qb_device_bringup/launch/: robot_control_node_bringup.launch  robot_opt_bringup.launch
qbdevice-ros/qb_device_driver/api/qbdevice-api-7.x.x/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md
qbdevice-ros/qb_device_driver/api/qbdevice-api-7.x.x/qbrobotics-driver/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md
qbdevice-ros/qb_device_driver/api/qbdevice-api-7.x.x/qbrobotics-driver/libs/research/include/qbrobotics_research_api/: qbmove_research_api.h  qbrobotics_research_api_wrapper.h  qbsofthand2_research_api.h
qbdevice-ros/qb_device_driver/api/qbdevice-api-7.x.x/qbrobotics-driver/libs/research/src/: qbmove_research_api.cpp  qbrobotics_research_api.cpp  qbrobotics_research_api_wrapper.cpp  qbsofthand2_research_api.cpp  qbsofthand_research_api.cpp
qbdevice-ros/qb_device_driver/api/qbdevice-api-7.x.x/serial/: .gitignore  CMakeLists.txt  LICENSE  README.md
qbdevice-ros/qb_device_driver/api/qbdevice-api-7.x.x/serial/include/serial/impl/: impl.h
qbdevice-ros/qb_device_driver/api/qbdevice-api-7.x.x/serial/src/: serial.cpp
qbdevice-ros/qb_device_driver/api/qbdevice-api-7.x.x/serial/src/impl/: impl_unix.cpp  impl_win.cpp
qbdevice-ros/qb_device_driver/api/qbdevice-api-7.x.x/serial/src/impl/list_ports/: list_ports_linux.cpp  list_ports_macos.cpp  list_ports_win.cpp
qbhand-ros/qb_hand_control/launch/: control_qbhand.launch
qbhand-ros/qb_hand_description/urdf/: qbhand.urdf  qbhand.urdf.xacro  xacro.py
qbhand-ros/qb_hand_hardware_interface/include/qb_hand_hardware_interface/: qb_hand_hardware_interface.h  qb_hand_transmission_interface.h
qbhand-ros/qb_hand_hardware_interface/src/: qb_hand_hardware_interface.cpp
radius_estimation/: CMakeLists.txt  package.xml
radius_estimation/scripts/: csvmerge.py  dataset_generator.py  estimate.py  predict.py  trainmodel.py
realsense-ros/realsense2_camera/launch/: demo_pointcloud.launch  rs_camera.launch
realsense-ros/realsense2_camera/launch/includes/: nodelet.launch.xml
yolov7-ros/class_labels/: berkeley.txt
yolov7-ros/launch/: yolov7.launch
yolov7-ros/src/: detect_ros.py
